<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edit_text_task_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textViewTaskPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/text_view_priority_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddTask"/>

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTaskPriority">

        <RadioButton
            android:id="@+id/radioButtonHighPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/materialRed"
            android:buttonTint="@android:color/white"
            android:text="@string/radio_button_high_priority_text"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="133dp"/>

        <RadioButton
            android:id="@+id/radioButtonMediumPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/materialOrange"
            android:buttonTint="@android:color/white"
            android:text="@string/radio_button_medium_priority_text"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="133dp"/>

        <RadioButton
            android:id="@+id/radioButtonLowPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/materialYellow"
            android:buttonTint="@android:color/white"
            android:checked="true"
            android:text="@string/radio_button_low_priority_text"
            android:textColor="@android:color/white"
            tools:layout_editor_absoluteX="258dp"
            tools:layout_editor_absoluteY="133dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonAddTask"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:background="@color/colorPrimary"
        android:text="@string/button_add_task"
        android:textColor="@android:color/primary_text_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupPriority"/>

</android.support.constraint.ConstraintLayout>